Using test colors for the buttons to correctly size them, but ensure the alignment is relative and correct.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 body{
     display: flex;
     height:100%
@@ -24,7 +28,9 @@ aside>h2 {
 
 .main_container {
     flex-grow:4;
-    display:grid
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .navbar {
@@ -64,3 +70,19 @@ h3 {
     display:flex;
     justify-content: end;
 }
+
+button {
+    background-color: black;
+    color:white;
+    border-style:none;
+    padding:1em 1em;
+    border-radius: .5em;
+
+}
+
+#note {
+    width:100%;
+    height: 100%
+
+}
+
